# ui-effects

./: LICENSE  README.md  stack.yaml  ui-effects.cabal
app/: Main.hs
gl/: Main.hs
src/Control/: Action.hs
src/Control/Applicative/Free/: Class.hs  Freer.hs
src/Control/Comonad/Cofree/: Cofreer.hs
src/Control/Exception/: Located.hs
src/Control/Monad/Free/: Freer.hs
src/Data/Functor/: Algebraic.hs  Listable.hs  Pretty.hs  Sum.hs  Union.hs
src/Effect/: State.hs
src/GL/: Array.hs  Draw.hs  Drawing.hs  Exception.hs  Geometry.hs  Program.hs  Scalar.hs  Setup.hs  Shader.hs
src/GL/Shader/: Core.hs  Fragment.hs
src/Graphics/: Shader.hs
src/Graphics/Shader/: Fragment.hs
src/UI/: Drawing.hs  Font.hs  Geometry.hs  Interaction.hs  Layout.hs  View.hs  Window.hs
test/: Spec.hs
test/Control/Comonad/Cofree/Cofreer/: Spec.hs
test/Control/Monad/Free/Freer/: Spec.hs
test/GL/Shader/: Spec.hs
test/GL/Shader/Fragment/: Spec.hs
test/Test/Hspec/: LeanCheck.hs
test/UI/Drawing/: Spec.hs
test/UI/Layout/: Spec.hs
