name:                ui-effects
version:             0.1.0.0
synopsis:            Experiment around effectful UI specifications.
description:         Please see README.md
homepage:            https://github.com/robrix/ui-effects#readme
license:             BSD3
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
copyright:           2016 Rob Rix
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Action
                     , Control.Applicative.Free.Freer
                     , Control.Monad.Free.Freer
                     , GL.Array
                     , GL.Draw
                     , GL.Exception
                     , GL.Program
                     , GL.Scalar
                     , GL.Setup
                     , GL.Shader
                     , UI.Drawing
                     , UI.View
                     , UI.Window
  build-depends:       base >= 4.7 && < 5
                     , gl
                     , linear
                     , sdl2
  default-language:    Haskell2010
  default-extensions:  DeriveFunctor
  ghc-options:         -Wall -fno-warn-name-shadowing

executable ui-effects-gl
  hs-source-dirs:      gl
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , gl
                     , linear
                     , mtl
                     , sdl2
                     , StateVar
                     , time
                     , transformers
                     , ui-effects
  default-language:    Haskell2010
  default-extensions:  LambdaCase

test-suite ui-effects-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       GL.Shader.Spec
  build-depends:       base
                     , hspec
                     , ui-effects
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/robrix/ui-effects
