name:                ui-effects
version:             0.1.0.0
synopsis:            Experiment around effectful UI specifications.
description:         Please see README.md
homepage:            https://github.com/robrix/ui-effects#readme
license:             BSD3
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
copyright:           2016 Rob Rix
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Functor.Algebraic
                     , Data.Functor.Listable
                     , Data.Functor.Union
                     , Effect.State
                     , GL.Array
                     , GL.Draw
                     , GL.Exception
                     , GL.Geometry
                     , GL.Program
                     , GL.Scalar
                     , GL.Setup
                     , GL.Shader
                     , UI.Drawing
                     , UI.Font
                     , UI.Geometry
                     , UI.Interaction
                     , UI.Layout
                     , UI.View
                     , UI.Window
  build-depends:       base >= 4.7 && < 5
                     , comonad
                     , exceptions
                     , free
                     , freer-cofreer
                     , gl
                     , leancheck
                     , linear
                     , opentype
                     , recursion-schemes
                     , sdl2
                     , text
  default-language:    Haskell2010
  default-extensions:  DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable
  ghc-options:         -Wall -fno-warn-name-shadowing

executable ui-effects
  hs-source-dirs:      gl
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , freer-cofreer
                     , gl
                     , linear
                     , mtl
                     , sdl2
                     , StateVar
                     , time
                     , transformers
                     , ui-effects
  default-language:    Haskell2010
  default-extensions:  LambdaCase

test-suite ui-effects-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Control.Comonad.Cofree.Cofreer.Spec
                     , Control.Monad.Free.Freer.Spec
                     , GL.Shader.Spec
                     , Test.Hspec.LeanCheck
                     , UI.Layout.Spec
  build-depends:       base
                     , hspec
                     , hspec-core
                     , leancheck
                     , linear
                     , ui-effects
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/robrix/ui-effects
